# severance

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml  static-analysis.yml
cmake/: Dependencies.cmake
docs/: architecture.md  contributing.md  event-system.md  plugin-sdk.md  roadmap.md
include/severance/platform/: sev_platform.h
include/severance/plugins/: IPluginAPI.hpp  severance_plugin_api.h
installer/: severance-installer.iss
plugins/: CMakeLists.txt
plugins/optics_and_design/: CMakeLists.txt  OpticsAndDesignPlugin.c
plugins/sample_c_plugin/: CMakeLists.txt  SampleCPlugin.c
plugins/sample_plugin/: CMakeLists.txt  SamplePlugin.cpp
plugins/security_plugin/: CMakeLists.txt  SecurityPlugin.cpp
scripts/: bootstrap.ps1
src/: main.cpp
src/core/ai/: AiEngine.cpp  AiEngine.hpp
src/core/application/: Application.cpp  Application.hpp
src/core/concurrency/: ThreadPool.cpp  ThreadPool.hpp
src/core/correlation/: CorrelationEngine.cpp  CorrelationEngine.hpp
src/core/events/: Event.hpp  EventBus.cpp  EventBus.hpp  EventTypes.hpp  FileActivityEvent.hpp  MacrodataRefinedEvent.hpp
src/core/filesystem/: EtwMonitor.cpp  EtwMonitor.hpp  FileEvent.hpp  FileMonitor.cpp  FileMonitor.hpp
src/core/game/: GameEngine.cpp  GameEngine.hpp
src/core/logging/: Logger.cpp  Logger.hpp
src/core/metrics/: BaselineManager.cpp  BaselineManager.hpp  SystemMetrics.hpp  WindowsMetricsProvider.cpp  WindowsMetricsProvider.hpp
src/core/network/: ConnectionInfo.hpp  NetworkManager.cpp  NetworkManager.hpp
src/core/notifications/: NotificationManager.cpp  NotificationManager.hpp  RuleEngine.cpp  RuleEngine.hpp
src/core/plugins/: CPluginBridge.hpp  IPlugin.hpp  PluginLoader.cpp  PluginManager.cpp  PluginManager.hpp
src/core/process/: ProcessInfo.hpp  ProcessManager.cpp  ProcessManager.hpp  ProcessTree.cpp  ProcessTree.hpp
src/core/sandbox/: IsolationPolicy.hpp  SandboxManager.cpp  SandboxManager.hpp  SandboxProfile.hpp
src/core/security/: ActiveResponse.cpp  ActiveResponse.hpp  EventLogManager.cpp  EventLogManager.hpp  FimManager.cpp  FimManager.hpp  RootkitScanner.cpp  RootkitScanner.hpp
src/core/session/: SessionManager.cpp  SessionManager.hpp
src/core/store/: EventStore.cpp  EventStore.hpp
src/core/workspace/: WorkspaceManager.cpp  WorkspaceManager.hpp
src/gui/ai_panel/: AiPanel.cpp  AiPanel.hpp
src/gui/board_comms/: BoardCommsView.cpp  BoardCommsView.hpp
src/gui/command/: CommandRegistry.hpp
src/gui/dashboard/: DashboardView.cpp  DashboardView.hpp
src/gui/file_view/: FileDetailPanel.cpp  FileDetailPanel.hpp  FileView.cpp  FileView.hpp
src/gui/graphs/: GraphWidget.hpp  OpenGLResourceGraph.cpp  OpenGLResourceGraph.hpp  ResourceGraph.cpp  ResourceGraph.hpp
src/gui/isolation_view/: IsolationView.cpp  IsolationView.hpp
src/gui/network_view/: NetworkDetailPanel.cpp  NetworkDetailPanel.hpp  NetworkView.cpp  NetworkView.hpp
src/gui/optics_and_design/: OpticsDesignView.cpp  OpticsDesignView.hpp
src/gui/perimeter_grid/: PerimeterGridView.cpp  PerimeterGridView.hpp
src/gui/process_view/: ProcessDetailPanel.cpp  ProcessDetailPanel.hpp  ProcessTreeModel.cpp  ProcessTreeModel.hpp  ProcessView.cpp  ProcessView.hpp
src/gui/search/: SearchOverlay.cpp  SearchOverlay.hpp
src/gui/security_view/: SecurityView.cpp  SecurityView.hpp
src/gui/session_view/: SessionView.cpp  SessionView.hpp
src/gui/terminal/: TerminalOverlay.cpp  TerminalOverlay.hpp
src/gui/theme/: Theme.cpp  Theme.hpp
src/gui/timeline/: TimelineDetailPanel.cpp  TimelineDetailPanel.hpp  TimelineHistogram.cpp  TimelineHistogram.hpp  TimelineView.cpp  TimelineView.hpp
src/gui/widgets/: CpuWidget.cpp  CpuWidget.hpp  DonutChartWidget.cpp  DonutChartWidget.hpp  GameHudWidget.cpp  GameHudWidget.hpp  HorizontalBarChartWidget.cpp  HorizontalBarChartWidget.hpp  MemoryWidget.cpp  MemoryWidget.hpp  NetworkWidget.cpp  NetworkWidget.hpp  NeuralTopologyWidget.cpp  NeuralTopologyWidget.hpp  NumberGridWidget.cpp  NumberGridWidget.hpp  StatusBarWidget.cpp  StatusBarWidget.hpp  StatusIndicator.cpp  StatusIndicator.hpp  ToastNotification.cpp  ToastNotification.hpp
src/gui/windows/: MainWindow.cpp  MainWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp
src/platform/windows/: sev_platform_win32.c
src/utils/: Config.cpp  Config.hpp  PerlinNoise.hpp  ScopedHandle.hpp  ThreadPool.cpp  ThreadPool.hpp  UUID.cpp  UUID.hpp
tests/unit/: dummy_test.cpp  test_core_utils.cpp  test_process_network.cpp  test_setup.cpp  test_system_components.cpp
